test/files/neg/t3015.check
t3015.scala:7: error: scrutinee is incompatible with pattern type;
<<<<<<< HEAD
 found   : _$1 where type _$1
 required: java.lang.String
  val b(foo) = "foo" 
       ^
t3015.scala:7: error: type mismatch;
 found   : _$1(in value foo) where type _$1(in value foo) <: java.lang.String
 required: (some other)_$1(in value foo) where type (some other)_$1(in value foo)
=======
 found   : _$1 where type +_$1
 required: String
  val b(foo) = "foo" 
       ^
t3015.scala:7: error: type mismatch;
 found   : String with _$1(in object Test) where type +_$1(in object Test)
 required: (some other)_$1(in object Test) where type +(some other)_$1(in object Test)
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  val b(foo) = "foo" 
      ^
two errors found
